--- a/daili.yaml
+++ b/daili.yaml
@@ -46,7 +46,7 @@ proxies:
   average: 9.17
   UpdateDay: '2022-06-12T12:31:23.267626'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 46043
+  Rank: 45893
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
   port: 21089
@@ -56,12 +56,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 9.74
-  maximum: 40.81
-  average: 22.09
-  UpdateDay: '2022-06-14T06:31:26.203596'
+  minimum: 10.87
+  maximum: 14.88
+  average: 12.75
+  UpdateDay: '2022-06-14T09:33:21.642583'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 40869
+  Rank: 40971
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -75,22 +75,22 @@ proxies:
   average: 624.84
   UpdateDay: '2022-06-10T15:30:56.789059'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 40524
+  Rank: 40374
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
-  port: 1443
   type: trojan
-  country: "\U0001F1EF\U0001F1F5 JP"
+  country: "\U0001F1EF\U0001F1F5JP"
+  port: 1443
   password: 7x42LetRa0
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 59.6
-  maximum: 62.01
-  average: 60.47
-  UpdateDay: '2022-06-14T06:31:26.372963'
+  minimum: 59.25
+  maximum: 64.0
+  average: 60.92
+  UpdateDay: '2022-06-14T09:32:23.598200'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 38329
+  Rank: 38415
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
   port: 443
@@ -100,12 +100,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 52.31
-  maximum: 53.86
-  average: 53.31
-  UpdateDay: '2022-06-14T06:31:26.355245'
+  minimum: 77.82
+  maximum: 91.99
+  average: 86.65
+  UpdateDay: '2022-06-14T09:33:21.975438'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 32314
+  Rank: 32391
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
   port: 443
@@ -115,12 +115,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 40.21
-  maximum: 41.35
-  average: 40.91
-  UpdateDay: '2022-06-14T06:31:26.300223'
+  minimum: 39.76
+  maximum: 40.94
+  average: 40.36
+  UpdateDay: '2022-06-14T09:33:21.825681'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 29249
+  Rank: 29351
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
   port: 443
@@ -130,12 +130,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 37.32
-  maximum: 48.77
-  average: 43.25
-  UpdateDay: '2022-06-14T06:31:26.354759'
+  minimum: 37.86
+  maximum: 52.37
+  average: 44.61
+  UpdateDay: '2022-06-14T09:33:21.879061'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 28126
+  Rank: 28228
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
@@ -150,7 +150,7 @@ proxies:
   average: 61.31
   UpdateDay: '2022-04-02T15:35:09.325376'
   PFirstFoundDay: '2022-03-14T10:28:14.224892'
-  Rank: 27518
+  Rank: 27568
 - name: www.seetheworldjp.ga:443@trojan
   password: f42e1a2e-e650-44f4-8d17-bcb68663da18
   port: 443
@@ -162,7 +162,7 @@ proxies:
   average: 57.86
   UpdateDay: '2022-04-03T15:12:54.472724'
   PFirstFoundDay: '2022-03-11T21:01:49.367854'
-  Rank: 27041
+  Rank: 27141
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -174,7 +174,7 @@ proxies:
   average: 56.06
   UpdateDay: '2022-04-03T15:12:54.456600'
   PFirstFoundDay: '2022-03-11T21:04:39.779731'
-  Rank: 26926
+  Rank: 26976
 - name: www.tokyo2021.ga:443@trojan
   server: www.tokyo2021.ga
   type: trojan
@@ -189,7 +189,22 @@ proxies:
   average: 41.15
   UpdateDay: '2022-04-02T15:34:32.686241'
   PFirstFoundDay: '2022-03-14T10:28:27.050426'
-  Rank: 26730
+  Rank: 26830
+- name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
+  server: jp-tyo-04-tr.cdn.savoy.click
+  type: trojan
+  country: "\U0001F1E8\U0001F1F3CN"
+  port: 889
+  password: SfobRIcergHchqBFzzua
+  skip-cert-verify: true
+  udp: true
+  success_rate: 100.0
+  minimum: 41.99
+  maximum: 50.89
+  average: 47.34
+  UpdateDay: '2022-06-14T09:32:23.599294'
+  PFirstFoundDay: '2022-03-20T12:36:16.101193'
+  Rank: 21485
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -202,22 +217,7 @@ proxies:
   average: 89.1
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 21632
-- name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
-  server: jp-tyo-04-tr.cdn.savoy.click
-  type: trojan
-  country: "\U0001F1E8\U0001F1F3CN"
-  port: 889
-  password: UiLPqefVfielqkDjEwBV
-  skip-cert-verify: true
-  udp: true
-  success_rate: 100.0
-  minimum: 41.89
-  maximum: 47.04
-  average: 44.06
-  UpdateDay: '2022-06-14T06:30:28.557588'
-  PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 21434
+  Rank: 21482
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
   type: trojan
@@ -232,22 +232,22 @@ proxies:
   average: 23.81
   UpdateDay: '2022-05-12T15:30:29.234708'
   PFirstFoundDay: '2022-03-13T18:26:01.142104'
-  Rank: 20583
+  Rank: 20433
 - name: ssl.tcpbbr.net:443@trojan
   server: ssl.tcpbbr.net
   port: 443
   type: trojan
   country: "\U0001F1ED\U0001F1F0 HK"
-  password: 08d178d4-ec8b-11eb-a8bf-f23c91cfbbc9
+  password: 7b4066ae-accc-11eb-a8bf-f23c91cfbbc9
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 41.37
-  maximum: 47.5
-  average: 44.94
-  UpdateDay: '2022-06-14T06:31:26.309339'
+  minimum: 38.26
+  maximum: 69.49
+  average: 49.04
+  UpdateDay: '2022-06-14T09:33:21.841229'
   PFirstFoundDay: '2022-03-27T06:36:10.059372'
-  Rank: 19492
+  Rank: 19595
 - name: 101.91.121.247:50004@ss
   type: ss
   server: 101.91.121.247
@@ -260,52 +260,52 @@ proxies:
   average: 10.83
   UpdateDay: '2022-05-10T15:30:34.077769'
   PFirstFoundDay: '2022-03-11T23:29:04.876882'
-  Rank: 18943
+  Rank: 18793
 - name: hk31.ssgnode.ga:443@trojan
   server: hk31.ssgnode.ga
-  port: 443
   type: trojan
-  country: "\U0001F1ED\U0001F1F0 HK"
+  country: "\U0001F1ED\U0001F1F0HK"
+  port: 443
   password: 41742_920c8caa
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 37.96
-  maximum: 38.56
-  average: 38.28
-  UpdateDay: '2022-06-14T06:31:26.290245'
+  minimum: 44.77
+  maximum: 51.26
+  average: 48.03
+  UpdateDay: '2022-06-14T09:32:23.511976'
   PFirstFoundDay: '2022-03-13T18:24:14.435896'
-  Rank: 16463
+  Rank: 16564
 - name: api.tcpbbr.net:443@trojan
   server: api.tcpbbr.net
   port: 443
   type: trojan
   country: "\U0001F1ED\U0001F1F0 HK"
-  password: 5c7b33c6-6d83-11eb-b77b-f23c913c8d2b
+  password: 283695dc-fcc8-11ea-8684-f23c913c8d2b
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 38.12
-  maximum: 39.3
-  average: 38.8
-  UpdateDay: '2022-06-14T06:31:26.295678'
+  minimum: 38.7
+  maximum: 3057.68
+  average: 1046.65
+  UpdateDay: '2022-06-14T09:33:24.836442'
   PFirstFoundDay: '2022-03-29T09:34:31.613124'
-  Rank: 15814
+  Rank: 15868
 - name: v.9051246.xyz:443@trojan
   server: v.9051246.xyz
-  port: 443
   type: trojan
-  country: "\U0001F1FA\U0001F1F8 US"
+  country: "\U0001F1FA\U0001F1F8US"
+  port: 443
   password: '18825786'
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 175.77
-  maximum: 189.03
-  average: 184.35
-  UpdateDay: '2022-06-14T06:31:26.784705'
+  minimum: 185.38
+  maximum: 190.78
+  average: 187.27
+  UpdateDay: '2022-06-14T09:32:59.965421'
   PFirstFoundDay: '2022-03-12T03:12:46.740408'
-  Rank: 15420
+  Rank: 15471
 - name: api.mjj-home.com:443@trojan
   server: api.mjj-home.com
   type: trojan
@@ -315,12 +315,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 144.28
-  maximum: 155.19
-  average: 150.39
-  UpdateDay: '2022-06-14T06:31:04.803265'
+  minimum: 149.64
+  maximum: 157.67
+  average: 154.4
+  UpdateDay: '2022-06-14T09:32:59.872265'
   PFirstFoundDay: '2022-03-12T03:14:59.624344'
-  Rank: 14646
+  Rank: 14697
 proxy-groups:
 - name: PG-default
   type: fallback
@@ -339,8 +339,8 @@ proxy-groups:
   - www.seetheworldjp.ga:443@trojan
   - www.ggchk.ga:443@trojan
   - www.tokyo2021.ga:443@trojan
-  - fkgfw-prod.i.sxl.cn:443@ss
   - jp-tyo-04-tr.cdn.savoy.click:889@trojan
+  - fkgfw-prod.i.sxl.cn:443@ss
   - hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   - ssl.tcpbbr.net:443@trojan
   - 101.91.121.247:50004@ss
