--- a/daili.yaml
+++ b/daili.yaml
@@ -35,19 +35,19 @@ dns:
 proxies:
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
-  port: 21089
   type: trojan
-  country: "\U0001F1E8\U0001F1F3 CN"
+  country: "\U0001F1E8\U0001F1F3CN"
+  port: 21089
   password: SfobRIcergHchqBFzzua
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 39.68
-  maximum: 46.24
-  average: 42.56
-  UpdateDay: '2022-06-15T15:38:47.450055'
+  minimum: 8.92
+  maximum: 46.77
+  average: 32.5
+  UpdateDay: '2022-06-15T18:33:27.283672'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 43822
+  Rank: 43923
 - name: 101.132.192.212:30003@ss
   server: 101.132.192.212
   port: 30003
@@ -61,22 +61,22 @@ proxies:
   average: 9.17
   UpdateDay: '2022-06-12T12:31:23.267626'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 41093
+  Rank: 40943
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
-  port: 1443
   type: trojan
-  country: "\U0001F1EF\U0001F1F5 JP"
+  country: "\U0001F1EF\U0001F1F5JP"
+  port: 1443
   password: 7x42LetRa0
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 60.67
-  maximum: 104.17
-  average: 77.98
-  UpdateDay: '2022-06-15T15:38:47.578325'
+  minimum: 65.45
+  maximum: 84.29
+  average: 72.98
+  UpdateDay: '2022-06-15T18:33:27.418118'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 40570
+  Rank: 40629
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -90,7 +90,7 @@ proxies:
   average: 624.84
   UpdateDay: '2022-06-10T15:30:56.789059'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 35574
+  Rank: 35424
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
   port: 443
@@ -100,27 +100,27 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 57.12
-  maximum: 61.59
-  average: 59.54
-  UpdateDay: '2022-06-15T15:38:47.503583'
+  minimum: 73.22
+  maximum: 80.33
+  average: 77.21
+  UpdateDay: '2022-06-15T18:34:07.720476'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 34553
+  Rank: 34615
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
-  port: 443
   type: trojan
-  country: "\U0001F1ED\U0001F1F0 HK"
+  country: "\U0001F1ED\U0001F1F0HK"
+  port: 443
   password: L1qNeGrY58ApwrRA
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 41.13
-  maximum: 49.49
-  average: 46.09
-  UpdateDay: '2022-06-15T15:38:47.450647'
+  minimum: 38.12
+  maximum: 47.08
+  average: 41.81
+  UpdateDay: '2022-06-15T18:33:27.316837'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 32355
+  Rank: 32431
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
   port: 443
@@ -130,12 +130,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 37.79
-  maximum: 50.17
-  average: 44.44
-  UpdateDay: '2022-06-15T15:38:48.586918'
+  minimum: 39.78
+  maximum: 58.33
+  average: 50.64
+  UpdateDay: '2022-06-15T18:34:10.120401'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 31439
+  Rank: 31541
 - name: www.seetheworldjp.ga:443@trojan
   password: f42e1a2e-e650-44f4-8d17-bcb68663da18
   port: 443
@@ -147,7 +147,7 @@ proxies:
   average: 57.86
   UpdateDay: '2022-04-03T15:12:54.472724'
   PFirstFoundDay: '2022-03-11T21:01:49.367854'
-  Rank: 30331
+  Rank: 30431
 - name: www.tokyo2021.ga:443@trojan
   server: www.tokyo2021.ga
   type: trojan
@@ -162,7 +162,7 @@ proxies:
   average: 41.15
   UpdateDay: '2022-04-02T15:34:32.686241'
   PFirstFoundDay: '2022-03-14T10:28:27.050426'
-  Rank: 30010
+  Rank: 30110
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
@@ -177,7 +177,7 @@ proxies:
   average: 61.31
   UpdateDay: '2022-04-02T15:35:09.325376'
   PFirstFoundDay: '2022-03-14T10:28:14.224892'
-  Rank: 29148
+  Rank: 29198
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -189,38 +189,37 @@ proxies:
   average: 56.06
   UpdateDay: '2022-04-03T15:12:54.456600'
   PFirstFoundDay: '2022-03-11T21:04:39.779731'
-  Rank: 28572
+  Rank: 28622
 - name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
   server: jp-tyo-04-tr.cdn.savoy.click
-  port: 889
   type: trojan
-  country: "\U0001F1E8\U0001F1F3 CN"
+  country: "\U0001F1E8\U0001F1F3CN"
+  port: 889
   password: UiLPqefVfielqkDjEwBV
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 38.53
-  maximum: 48.12
-  average: 42.33
-  UpdateDay: '2022-06-15T15:38:47.487656'
+  minimum: 39.41
+  maximum: 51.86
+  average: 45.16
+  UpdateDay: '2022-06-15T18:33:27.377791'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 23076
-- country: "mattkaydiary.com|\u4E2D\u56FD\u9999\u6E2F\u7279\u522B\u884C\u653F\u533A\
-    (HK)Hongkong+SAR+China/Hong+Kong_42"
-  name: ssl.tcpbbr.net:443@trojan
-  password: 7b4066ae-accc-11eb-a8bf-f23c91cfbbc9
-  port: 443
+  Rank: 23127
+- name: ssl.tcpbbr.net:443@trojan
   server: ssl.tcpbbr.net
-  skip-cert-verify: true
+  port: 443
   type: trojan
+  country: "\U0001F1ED\U0001F1F0 HK"
+  password: 5c7b33c6-6d83-11eb-b77b-f23c913c8d2b
+  skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 52.77
-  maximum: 100.87
-  average: 72.21
-  UpdateDay: '2022-06-15T15:38:47.481963'
+  minimum: 66.69
+  maximum: 84.7
+  average: 74.59
+  UpdateDay: '2022-06-15T18:34:07.675651'
   PFirstFoundDay: '2022-03-27T06:36:10.059372'
-  Rank: 21942
+  Rank: 21989
 - name: hk31.ssgnode.ga:443@trojan
   server: hk31.ssgnode.ga
   port: 443
@@ -230,42 +229,42 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 38.99
-  maximum: 46.64
-  average: 43.78
-  UpdateDay: '2022-06-15T15:38:47.391712'
+  minimum: 35.91
+  maximum: 36.56
+  average: 36.24
+  UpdateDay: '2022-06-15T18:34:07.547005'
   PFirstFoundDay: '2022-03-13T18:24:14.435896'
-  Rank: 18802
+  Rank: 18904
 - name: api.tcpbbr.net:443@trojan
   server: api.tcpbbr.net
-  port: 443
   type: trojan
-  country: "\U0001F1ED\U0001F1F0 HK"
+  country: "\U0001F1ED\U0001F1F0HK"
+  port: 443
   password: 5c7b33c6-6d83-11eb-b77b-f23c913c8d2b
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 40.1
-  maximum: 1041.72
-  average: 378.92
-  UpdateDay: '2022-06-15T15:38:48.387174'
+  minimum: 38.48
+  maximum: 1066.88
+  average: 387.77
+  UpdateDay: '2022-06-15T18:33:28.406834'
   PFirstFoundDay: '2022-03-29T09:34:31.613124'
-  Rank: 17173
+  Rank: 17213
 - name: v.9051246.xyz:443@trojan
   server: v.9051246.xyz
-  port: 443
   type: trojan
-  country: "\U0001F1FA\U0001F1F8 US"
+  country: "\U0001F1FA\U0001F1F8US"
+  port: 443
   password: '18825786'
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 185.48
-  maximum: 207.12
-  average: 196.07
-  UpdateDay: '2022-06-15T15:38:50.902813'
+  minimum: 166.32
+  maximum: 184.05
+  average: 175.65
+  UpdateDay: '2022-06-15T18:33:50.069039'
   PFirstFoundDay: '2022-03-12T03:12:46.740408'
-  Rank: 17070
+  Rank: 17121
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -278,7 +277,7 @@ proxies:
   average: 89.1
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 16682
+  Rank: 16532
 - name: api.mjj-home.com:443@trojan
   server: api.mjj-home.com
   port: 443
@@ -288,12 +287,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 150.0
-  maximum: 157.69
-  average: 154.7
-  UpdateDay: '2022-06-15T15:38:51.018311'
+  minimum: 147.82
+  maximum: 156.52
+  average: 151.64
+  UpdateDay: '2022-06-15T18:34:10.511814'
   PFirstFoundDay: '2022-03-12T03:14:59.624344'
-  Rank: 16293
+  Rank: 16345
 - name: www.nyc3000.ga:443@trojan
   server: www.nyc3000.ga
   type: trojan
@@ -308,22 +307,22 @@ proxies:
   average: 144.58
   UpdateDay: '2022-03-22T06:32:56.744843'
   PFirstFoundDay: '2022-03-14T10:26:21.691651'
-  Rank: 15912
-- name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
-  server: hk-hkg-shhk-001-tr.cdn.savoy.click
+  Rank: 15962
+- name: xioix.gq:443@trojan
+  server: xioix.gq
+  port: 443
   type: trojan
-  country: "\U0001F1E8\U0001F1F3CN"
-  port: 20089
-  password: SfobRIcergHchqBFzzua
+  country: "\U0001F1FA\U0001F1F8 US"
+  password: 9b7195ba-f029-4d7d-a728-ece6e0fdc363
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 11.99
-  maximum: 40.01
-  average: 23.81
-  UpdateDay: '2022-05-12T15:30:29.234708'
-  PFirstFoundDay: '2022-03-13T18:26:01.142104'
-  Rank: 15633
+  minimum: 166.07
+  maximum: 166.45
+  average: 166.31
+  UpdateDay: '2022-06-15T18:34:10.527577'
+  PFirstFoundDay: '2022-03-12T03:14:49.943605'
+  Rank: 15664
 proxy-groups:
 - name: PG-default
   type: fallback
@@ -350,7 +349,7 @@ proxy-groups:
   - fkgfw-prod.i.sxl.cn:443@ss
   - api.mjj-home.com:443@trojan
   - www.nyc3000.ga:443@trojan
-  - hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
+  - xioix.gq:443@trojan
   tolerance: 250
 rule-providers:
   anting:
